<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home_menu"
    android:background="@drawable/debesys">


    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/menuB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menubutton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="108dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/returnB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/returnbutton" />

    <Button
        android:id="@+id/interactiveF"
        android:layout_width="333dp"
        android:layout_height="128dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_bg_stroke"
        android:text="@string/interactive"
        android:textAlignment="center"
        android:textSize="48sp"
        app:fontFamily="@font/amatica_sc_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/RandomF"
        android:layout_width="333dp"
        android:layout_height="128dp"
        android:layout_marginBottom="264dp"
        android:background="@drawable/button_bg_stroke"
        android:text="@string/random"
        android:textAlignment="center"
        android:textSize="48sp"
        app:fontFamily="@font/amatica_sc_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/wastemy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:fontFamily="@font/amatica_sc_bold"
        android:text="@string/waste"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>