<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:background="@drawable/debesys">


    <ImageButton
        android:id="@+id/returnbutton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/returnB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/returnbutton" />

    <Button
        android:id="@+id/homeMenuButton"
        android:layout_width="342dp"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/button_bg_stroke"
        android:text="@string/homemenu"
        android:textAlignment="center"
        android:textSize="60sp"
        app:fontFamily="@font/amatica_sc_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/megstamiausi"
        android:layout_width="342dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg_stroke"
        android:text="@string/fav"
        android:textAlignment="center"
        android:textSize="60sp"
        app:fontFamily="@font/amatica_sc_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeMenuButton" />

    <Button
        android:id="@+id/statistics"
        android:layout_width="342dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg_stroke"
        android:text="@string/statisticsmenu"
        android:textAlignment="center"
        android:textSize="60sp"
        app:fontFamily="@font/amatica_sc_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/megstamiausi" />

    <Button
        android:id="@+id/interesai"
        android:layout_width="342dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg_stroke"
        android:text="@string/Interestsmenu"
        android:textAlignment="center"
        android:textSize="60sp"
        app:fontFamily="@font/amatica_sc_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics" />
</androidx.constraintlayout.widget.ConstraintLayout>